# yfai

./: .gitignore  AGENTS.md  CHANGELOG.md  CRITICAL_ISSUES_SUMMARY.md  DEVELOPMENT_ROADMAP.md  FEATURES_STATUS.md  INSTALLATION.md  OPTIMIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  pyproject.toml  requirements.txt  run.py  test_integration.py
.claude/: settings.local.json
configs/: .env.example  McpRegistry.yaml  config.example.yaml
docs/: 技术栈与实现规划.md  操作手册.md  改造计划.md  缺失功能清单.md
docs/design/: 设计文档.md
docs/development/: 功能清单.md
old/: ANALYSIS_QUICK_START.md  CODE_ANALYSIS_REPORT.md  ISSUES_CHECKLIST.csv  优化建议.md  改造建设方案.md
old/prototype/: FEATURES.md  README.md  ROADMAP.md  agents-center.html  approval-dialog.html  assistants.html  command-palette.html  connectors.html  index.html  jobs.html  knowledge.html  logs.html  sessions.html  tools-sidebar.html
prototype/: FEATURES.md  ROADMAP.md  approval-dialog.html  automation.html  file-permissions.html  settings.html
prototype/assets/: common.css
yfai/: __init__.py  __main__.py  main.py
yfai/app/: __init__.py  main_window.py
yfai/automation/: __init__.py  scheduler.py
yfai/connectors/: __init__.py  base.py  http.py
yfai/core/: __init__.py  agent_runner.py  config.py  orchestrator.py
yfai/localops/: __init__.py  fs.py  net.py  process.py  shell.py
yfai/mcp/: __init__.py  client.py  registry.py
yfai/providers/: __init__.py  bailian.py  base.py  defaults.py  manager.py  ollama.py
yfai/search/: __init__.py  adapters.py  base.py  manager.py
(+25 files in other folders)
